<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    android:isScrollContainer="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivpetImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/memimg" />
            <Button
                android:id="@+id/btTakePicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="onPickPictureClick"
                android:text="@string/btChoose"
                android:layout_alignBottom="@+id/ivpetImg"
                android:layout_toRightOf="@+id/ivpetImg"
                android:background="#08AE9E"/>
            <Button
                android:id="@+id/btTakePicture1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:onClick="onTakePictureClick"
                android:text="@string/btTakePicture"

                android:layout_alignBaseline="@+id/btTakePicture"
                android:layout_alignBottom="@+id/btTakePicture"
                android:layout_toRightOf="@+id/btTakePicture"
                android:layout_toEndOf="@+id/btTakePicture"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/btTakePicture1"
                android:layout_toEndOf="@+id/btTakePicture1"
                android:onClick="allPetFill"
                android:text="O" />
        </RelativeLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/petGender">

            <TextView
                android:id="@+id/petsex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="寵物性別"
                android:textAlignment="textStart"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/petmale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="44dp"
                android:checked="true"
                android:hint="0"
                android:paddingRight="15dp"
                android:text="@string/text_petmale"
                android:textColor="@color/radioCheckedColor" />

            <RadioButton
                android:id="@+id/petfemale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_petfemale"
                android:hint="1"
                android:textColor="@color/radioCheckedColor" />
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/petKind">

            <TextView
                android:id="@+id/tvpetKind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="寵物類別"
                android:textAlignment="textStart"
                android:textSize="19sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <RadioButton
                android:id="@+id/dog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="44dp"
                android:text="@string/text_dog"
                android:hint="0"
                android:checked="true"
                android:paddingRight="15dp"
                android:textColor="@color/radioCheckedColor" />

            <RadioButton
                android:id="@+id/cat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_cat"
                android:hint="1"
                android:textColor="@color/radioCheckedColor" />
            <RadioButton
                android:id="@+id/otherType1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/radioCheckedColor"
                android:text="@string/text_OtherType"
                android:hint="2"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/otherType"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:inputType="none"/>

            </android.support.design.widget.TextInputLayout>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/text_petName"
                android:inputType="textPersonName"
                android:textColor="@color/radioCheckedColor"
                android:layout_marginLeft="5dp" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/petSpecies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/text_petSpecies"
                android:inputType="text"
                android:textColor="@color/radioCheckedColor"
                android:layout_marginLeft="5dp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/memBday1"
                android:layout_width="90dp"
                android:layout_height="47dp"
                android:gravity="center"

                android:hint="@string/text_petBday"
                android:paddingLeft="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/radioCheckedColor"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/memBday" />

            <TextView
                android:id="@+id/tvpetBday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="請選擇"
                android:textAlignment="textStart"
                android:textColor="#e0dada"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/memBday1"
                android:layout_toEndOf="@+id/memBday1" />

            <Button
                android:id="@+id/bdaybutton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/calendar"
                android:onClick="onDateClick"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/shipper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/petIntro"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="寵物介紹"
                android:inputType="textMultiLine"
                android:overScrollMode="always"

                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>







        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <!--<Button-->
            <!--android:id="@+id/btFinishInsert"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toStartOf="@+id/btRegisterNextStep"-->
            <!--android:onClick="onInsertClick"-->
            <!--android:text="@string/text_Insert"-->
            <!--android:layout_toLeftOf="@+id/btRegisterNextStep" />-->

            <Button
                android:id="@+id/btRegisterFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:onClick="onNextlClick"
                android:text="@string/text_btonNextlClick"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>