<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor">
    <ImageView
        android:id="@+id/ivMemImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_marginBottom="84dp"
        android:layout_above="@+id/textInputLayout"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btLogin"
        android:layout_marginBottom="160dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/text_memEmail"
            android:inputType="text"
            android:textColor="#0000FF"
            android:layout_marginLeft="5dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btLogin"
        android:layout_marginBottom="80dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
            >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/text_memPwd"
            android:inputType="textPassword"
            android:textColor="#0000FF"
            android:layout_marginLeft="5dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:layout_weight="1"
        android:background="#5AD3E2"
        android:onClick="onInsertClick"
        android:text="@string/text_Login" />

</RelativeLayout>